corrected the texxt-align on section 1

--- a/files/styles/_section1.scss
+++ b/files/styles/_section1.scss
@@ -49,6 +49,7 @@
 			padding: 6rem 4rem;
 			left: 45rem;
 			top: 19rem;
+			text-align: left;
 
 			h1 {
 				font-size: 2.5rem;
