--- a/files/styles/styles.css
+++ b/files/styles/styles.css
@@ -244,6 +244,7 @@ header .overlay .overlay-links a:not(:last-child) {
     padding: 6rem 4rem;
     left: 45rem;
     top: 19rem;
+    text-align: left;
   }
   .first-section .img-text h1 {
     font-size: 2.5rem;
